Integrating upstream changes